--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SimpleBlog</string>
     <string name="add_post">Add Post</string>
+    <string name="settings">Settings</string>
 </resources>
