--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,25 @@
 <resources>
-    <string name="app_name">SimpleBlog</string>
+    <string name="app_name">Photo Blog</string>
     <string name="add_post">Add Post</string>
     <string name="settings">Settings</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <string name="password_hint">password</string>
+    <string name="confirm_password_hint">confirm password</string>
+    <string name="email_hint">email</string>
+
+    <string name="sign_up">Sign Up</string>
+    <string name="log_in">Log In</string>
+    <string name="get_help">Get help</string>
+
+
+    <string name="already_have_an_account_tv">Already have an account? </string>
+
+    <string name="signUp_tv">Don\'t have an account?</string>
+    <string name="log_in_btn">Log In</string>
+    <string name="sign_up_btn">Sign Up</string>
+
+    <string name="forgot_password_tv">Forgot password? </string>
+    <string name="log_out">Logout</string>
+
 </resources>
