--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
 
     <string name="forgot_password">Forgot password? </string>
     <string name="get_help">Get help</string>
+    <string name="enter_your_name">your name</string>
+    <string name="save_account_settings">save account settings</string>
 
 
 </resources>
