moved MainActivity and created bottom nav view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,12 @@
     <string name="add_new_post">Add new post</string>
     <string name="add_description">Add description...</string>
     <string name="post_it">Post it</string>
+    <string name="home">home</string>
+    <string name="notification">notificaton</string>
+    <string name="account">account</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
